# space-invaders-opengl

./: CMakeLists.txt  README.md
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: main.cpp
